# minor-project-gtbit

./: .gitignore  .gitmodules  SECURITY.md  SRS.md  readme.md  todo.md
server/ai_service/: .dockerignore  .env.example  .gitignore  Dockerfile  RENDER_DEPLOYMENT.md  build.sh  docker-compose.yml  ingest.py  knowledge_base.txt  main.py  monitoring.py  pyproject.toml  rate_limiter.py  readme.md  requirements.txt  run_ollama.py  run_vllm.py  start.sh  test.py  view_db.py
server/ai_service/__tests__/: test_main.py
server/ai_service/db/: chroma.sqlite3
server/ai_service/knowledge_base/disease_data/: AIDS.txt  Abdominal_Hernia.txt  Abdominal_Injury.txt  Abscess.txt  Abscess_of_Nose.txt  Abscess_of_the_Lung.txt  Achalasia.txt  Acinic_cell_carcinoma.txt  Acne.txt  Actinic_Keratosis.txt  Acute_Bronchospasm.txt  Acute_Glaucoma.txt  Acute_Kidney_Injury.txt  Acute_Otitis_Media.txt  Acute_Pancreatitis.txt  Acute_Sinusitis.txt  Adenoid_cystic_carcinoma.txt  Adrenal_Cancer.txt  Alcohol_Intoxication.txt  Alcohol_Use_Disorder.txt  Alcoholic_hepatitis.txt  Allergy.txt  Alopecia.txt  Amyloidosis.txt  Anal_Fissure.txt  Anemia.txt  Anemia_due_to_Chronic_Kidney_Disease.txt  Anemia_due_to_Malignancy.txt  Anemia_of_Chronic_Disease.txt  Angle-Closure_Glaucoma.txt  Anorexia_Nervosa.txt  Antihypertensives_Poisoning.txt  Antimicrobial_Drugs_Poisoning.txt  Anxiety.txt  Aplastic_Anemia.txt  Arthritis (1).txt  Arthritis.txt  Asthma.txt  Astigmatism.txt  Atelectasis.txt  (+393 more)
server/ai_service/knowledge_base/medicines/by_action_class/: alpha_2-adrenoceptors_agonist_central_sympatholytics.txt  aminoglycosides.txt  androgens.txt  anticholinergics.txt  anticholinesterase-prokinetic_agent.txt  antimicrobials-_acne.txt  antiprotozoal_agents.txt  antiviral_non-hiv_drugs.txt  atypical_antipsychotics.txt  benzodiazepines.txt  beta_blocker-_cardioselective.txt  calcium_channel_blockers-_dihydropyridines_dhp.txt  cell_wall_active_agent_-extended_spectrum_penicillin.txt  cough_suppressants.txt  dopamine_facilitator.txt  fungal_ergosterol_synthesis_inhibitor.txt  glucocorticoids.txt  h1_antihistaminics_first_generation.txt  h1_antihistaminics_second_generation.txt  h2_receptor_blocker.txt  hmg_coa_inhibitors_statins.txt  macrolides.txt  (+28 more)
server/ai_service/knowledge_base/mental_health/: intervention_guide.txt  mental_health_recognition_guide.txt
(+223202 files in other folders)
